<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/eventLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/eventNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_an_event_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/startPointLayout"
        android:layout_below="@id/eventLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/startPointET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/your_starting_location"
            android:imeOptions="actionNext"
            android:inputType="text"
            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/destinationLayout"
        android:layout_below="@id/startPointLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/destinationET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/your_destination"
            android:imeOptions="actionNext"
            android:inputType="text"
            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/destinationLayout">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/dateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/depurture_date"
            android:imeOptions="actionNext"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/budgetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLayout">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/budgetET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/your_estimated_budget"
            android:imeOptions="actionNext"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/budgetLayout"
        android:text="Cteate Event"/>



</RelativeLayout>